<resources>
    <string name="app_name">Hacker Tracker</string>
    <string name="action_share">Share</string>
    <string-array name="filter_types">
        <item>@string/official</item>
        <item>@string/speakers</item>
        <item>@string/skytalks</item>
        <item>@string/events</item>
        <item>@string/villages</item>
        <item>@string/kids</item>
        <item>@string/labs</item>
        <item>@string/breaks</item>
        <item>@string/contests</item>
        <item>@string/parties</item>
        <item>@string/demo_labs</item>
        <item>@string/workshops</item>
    </string-array>
    <string name="official">DEFCON</string>
    <string name="speakers">Speakers</string>
    <string name="contests">Contests</string>
    <string name="demo_labs">Demo Labs</string>
    <string name="villages">Villages</string>
    <string name="labs">Labs</string>
    <string name="breaks">Break</string>
    <string name="events">Events</string>
    <string name="parties">Parties</string>
    <string name="kids">Kids</string>
    <string name="skytalks">Skytalks</string>
    <string name="workshops">Workshops</string>
    <string name="settings">Settings</string>
    <string name="schedule">Schedule</string>
    <string name="map">Maps</string>
    <string name="badges">Badges &amp; Admission</string>
    <string name="wifi">DEF CON WiFi</string>
    <string name="radio">DEF CON Radio</string>
    <string name="no_updates">Your schedule is up to date! :)</string>
    <string name="schedule_finished">Schedule sync complete</string>
    <string name="tba">TBA</string>
    <string name="save">Save</string>
    <string name="workshop_info_text">
        Workshop registration was held online July 5th. There is no on-site registration, signup sheet, and all seats (including standby) are sold out.\n\n
        For more information on the workshops, please visit the DEF CON website.\n\n
        Pre-registration will be online again for DEF CON 26.
    </string>
    <string name="badges_description">
        DEF CON regular badge pricing is $260, cash only, at the DEF CON registration area. See map for directions to registration area.
        \n\nDEF CON does not offer pre-registration.
        \n\nBadges go on sale 6AM Thursday morning! Welcome to LineCon! Bring a drink (and/or coffee), make some friends, and enjoy the ride. :)
    </string>
    <string name="wifi_description"><![CDATA[
        Caesars Palace rooms will give you access to wifi for up to two devices.\n\n
        DEF CON WiFi registration information will be available at http://wifireg.defcon.org.\n\n
        DEF CON is FULLY network-enabled. Now that we\'ve perfected the art of a stable hacker con network, we\'re ascending to a higher level - we\'re providing you a network that you feel SAFE in using! Since DEF CON 18 we\'re WPA2 encrypted over-the-air, with a direct trunk out to the Internet. No peer-to-peer, no sniffing, just straight to the net (and internal servers). We\'ll provide login credentials at Registration. We know the 3G airwaves will be saturated so we\'re putting our own cred on the line to give you a net that even we would put our own mobile phones on.\n\n
        If you\'re feeling frisky, we\'ll still have the traditional \"open\" network for you - bring your laptop (we\'d recommend a clean OS, fully patched—you know the procedure) because we don\'t police what happens on that net. Share & enjoy!
    ]]></string>
    <string name="radio_text">
        Music for Hacking. The DEF CON Year-Round Channel.\n\n
        Since 2013, SomaFM has provided the music for the DEF CON Chill room. That theme continues with SomaFM broadcasting this special year-round stream hosted by the DJs who entertain the DEF CON 24 chill room this year in Vegas.\n\n
        Check out http://somafm.com/defcon/ to listen online, or download the Android app here: https://somafm.com/mobile/android.html
    </string>
    <string name="demo">DEMO</string>
    <string name="tool">TOOL</string>
    <string name="exploit">EXPLOIT</string>
    <string name="information">Information</string>
    <string name="change_con">Change Conference</string>
    <string-array name="cons">
        <item>@string/defcon</item>
        <item>@string/toorcon</item>
        <item>@string/shmoocon</item>
        <item>@string/hackwest</item>
        <item>@string/layerone</item>
        <item>@string/bsidesorl</item>
    </string-array>
    <string name="msg_change_cons">We\'re branching out to supporting multiple conferences.</string>
</resources>