<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule_white_24dp"
            android:title="@string/schedule" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_white_24dp"
            android:title="@string/map" />

        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/ic_info_outline_white_24dp"
            android:title="@string/information" />

        <item android:id="@+id/nav_contests"
            android:icon="@drawable/ic_cake_white_24dp"
            android:title="@string/contests"
            android:visible="false"/>

        <item android:id="@+id/nav_workshops"
            android:icon="@drawable/ic_computer_white_24dp"
            android:title="@string/workshops"
            android:visible="false"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:orderInCategory="4"
            android:title="@string/settings" />

    </group>

</menu>