<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#57000000"
    app:cardCornerRadius="4dp"
    android:id="@+id/container"
    >

    <LinearLayout


        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:background="@color/background">


        <View
            android:id="@+id/category"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:background="#da3a3a" />

        <LinearLayout
            android:id="@+id/rootLayout"
            style="@style/row"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                style="@style/title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:alpha=".75"
                android:textColor="@color/white"
                android:textSize="@dimen/abc_text_size_title_material"
                tools:text="DARPA Cyber Grand Challenge" />

            <TextView
                android:id="@+id/location"
                style="@style/where"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha=".75"
                android:textColor="@color/white"
                android:textSize="@dimen/abc_text_size_subhead_material"
                tools:text="Track 1" />

            <LinearLayout
                android:id="@+id/icons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/demo"
                    style="@style/icon_text"
                    android:text="@string/demo" />

                <TextView
                    android:id="@+id/exploit"
                    style="@style/icon_text"
                    android:text="@string/exploit" />

                <TextView
                    android:id="@+id/tool"
                    style="@style/icon_text"
                    android:text="@string/tool" />

            </LinearLayout>

            <TextView
                android:id="@+id/time"
                style="@style/where"
                android:alpha=".75"
                android:textColor="@color/white"
                android:textSize="@dimen/abc_text_size_subhead_material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/where"
                android:alpha=".75"
                android:textColor="@color/white"
                android:textSize="@dimen/abc_text_size_subhead_material"
                android:id="@+id/category_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>